# BakeThePayload

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  phase1.md  phase2.md  pyproject.toml  pyproject.toml.dev  test_github_advisory.py  test_samples.py  todo-test.md  updated-plan.md
.claude/: Claude.md  settings.local.json
.claude/commands/: commit.md  find-missing-test.md
agents/: __init__.py  adapters.py  base.py  collector.py  data_sources.py  deduplication.py  rate_limiter.py
analysis/: __init__.py  callgraph.py  context.py  grammar.py
analysis/queries/: __init__.py  java.py  javascript.py  python.py  ruby.py
cache/: __init__.py  disk.py  manager.py  memory.py  utils.py
integration/: __init__.py  repo.py
models/: __init__.py  artifact.py  assessment.py  base.py  exploit.py  vulnerability.py
parsers/: __init__.py  advisory.py  diff.py  version.py
tests/: __init__.py  test_async_http_client.py  test_cache.py  test_data_collection.py  test_integration.py  test_main_execution.py  test_models.py  test_parsers.py  test_performance.py  test_rate_limiter.py  test_repository_manager.py  test_tree_sitter_analysis.py
